2006-02-10  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Remove Direct Mail code from tslib_fe and add	checkDataSubmission hook

2006-02-10  Christian Jul Jensen  <christian@jul.net>

	* Added TCAselectItem to stdWrap, see TSref

2006-02-09  Rene Fritz  <r.fritz@colorcube.de>

	* Added $TYPO3_CONF_VARS['SYS']['binSetup'] and made t3lib_exec use of it.
	* Added TSconfig option options.hideRecords.[table]. Used in pagetree nav frame, web>list module, new record wizard

2006-02-09  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2105: The width of tt_content is too large (due to access options)

2006-02-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #2365: Replace true linebreaks with space inside block tags and after hr tags in t3lib_parsehtml_proc.
	* Changes to the htmlArea RTE extension (see details in local ChangeLog)
	* Fixed bug #1496: Enable Direct Mail to fetch a server listening to a port other than 80 (t3lib_htmlmail)
	* Fix stdAuthCode in t3lib_div

2006-02-08  Michael Stucki  <michael@typo3.org>

	* Various changes to indexed_search, see local ChangeLog for details
	* !!! Changed default value of TYPO3_CONF_VARS[BE][fileCreateMask/folderCreateMask]. By default, those files are no longer writable for the group.
	* Fixed bug #2272: Added [PAGE].includeJS plus possibility to attach .js files to template resources (thanks to Johannes Vockeroth)
	* Fixed bug #75: t3lib_extfilefunc::func_copy() does not set file permissions properly
	* Encode whitespaces in t3lib_div::encodeHeader() as required by RFC 2047 (thanks to Stanislas)
	* Added crdate and tstamp fields to be selected by users in the Web->List view
	* Fixed bug #2200: In FEediting the creation of new records in other pages than the current should be possible

2006-02-07  Ingmar Schlecht <ingmar@typo3.org>

	* Fix "&amp;" problem in DMail jumpURLs

2006-02-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
